[project]
name = "blsc-token-inspect"
version = "0.1.0"
description = "Local web-based dashboard for analyzing LLM token usage from billing xlsx files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BLSC" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "flask>=3.0",
    "openpyxl>=3.1",
    "numpy>=1.26",
]

[project.scripts]
token-inspector = "app.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app", "data"]

[dependency-groups]
dev = [
    "pytest>=8",
]